Fix top left mozilla mobile nav z-indexed under logos

--- a/media/css/firefox/partners.less
+++ b/media/css/firefox/partners.less
@@ -116,7 +116,7 @@
 
     .article-header {
         position: relative;
-        z-index: 100;
+        z-index: 98;
         width: @widthDesktop - (@gridGutterWidth * 2);
         padding: @baseLine 0;
         display: block;
